Tests/a1/reject/05.ul
int main () {
	return (return x);
}